add future test

--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -2,7 +2,8 @@ add_executable(folly_unit_test
     dynamic_test.cc
     compression_test.cc
     iobuf_test.cc
-    hasher_test.cc)
+    hasher_test.cc
+    future_test.cc)
 target_link_libraries(folly_unit_test PRIVATE
     Folly::folly
     GTest::gtest
