--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,3 +77,4 @@ FetchContent_MakeAvailable(googlebenchmark)
 add_subdirectory(cxx17)
 add_subdirectory(template)
 add_subdirectory(folly)
+add_subdirectory(algorithm)
