add hasher impl

--- a/folly/CMakeLists.txt
+++ b/folly/CMakeLists.txt
@@ -7,8 +7,12 @@ add_executable(folly_unit_test
 target_link_libraries(folly_unit_test PRIVATE
     Folly::folly
     GTest::gtest
-    GTest::gtest_main)
+    GTest::gtest_main
+    spooky_hash)
 target_compile_features(folly_unit_test PRIVATE
     cxx_std_17)
+
+add_library(spooky_hash
+    SpookyV2.cpp)
 
 add_test(folly_unit_test folly_unit_test)
