--- a/velox_/CMakeLists.txt
+++ b/velox_/CMakeLists.txt
@@ -1,9 +1,10 @@
 add_executable(velox_unit_test
-    velox_vector_hasher_test.cc)
+    vector_hasher_test.cc)
 target_link_libraries(velox_unit_test PRIVATE
     Folly::folly
     GTest::gtest
     GTest::gtest_main
+    xsimd
     velox_exec
     velox_vector_test_lib)
 target_compile_features(velox_unit_test PRIVATE
