--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G ${{env.GENERATOR}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -G ${{env.GENERATOR}} ${{CMAKE_ARGS}}
 
     - name: Build
       # Build your program with the given configuration
@@ -50,4 +50,4 @@ jobs:
         with:
           submodule_update: ON
           run_tests: ON
-          unit_test_build: -Dtest=ON
+          unit_test_build: ${{CMAKE_ARGS}}
