--- a/cxx17/CMakeLists.txt
+++ b/cxx17/CMakeLists.txt
@@ -2,11 +2,13 @@ add_executable(cxx_unit_test
   function_test.cc
   mutex_test.cc
   ptr_test.cc
+  set_test.cc
   string_view_test.cc
   scoped_cleanup_test.cc)
 target_link_libraries(cxx_unit_test PRIVATE
   GTest::gtest
-  GTest::gtest_main)
+  GTest::gtest_main
+  Boost::headers)
 target_compile_features(cxx_unit_test PRIVATE
   cxx_std_17)
 
